--- a/.env.sample.
+++ b/.env.sample.
@@ -1,2 +1,6 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://user_name:password@cluster0.qlkzqag.mongodb.net
+ACCESS_TOKEN_SECRET = backend
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = tutorial
+REFRESH_TOKEN_EXPIRY = 10d
