multer and cloudinary add

--- a/.env.sample.
+++ b/.env.sample.
@@ -4,3 +4,10 @@ ACCESS_TOKEN_SECRET = backend
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = tutorial
 REFRESH_TOKEN_EXPIRY = 10d
+
+modellink = https://app.eraser.io/workspace/YtPqZ1VogxGy1jzIDkzj
+
+
+CLOUDINARY_CLOUD_NAME = HELLO
+CLOUDINARY_CLOUD_API_KEY = api key
+CLOUDINARY_CLOUD_API_SECRET = hello_key
